--- a/assets/index.html
+++ b/assets/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" type="text/css" href="css/css.css">
   <script src = "js/board.js"></script>
   <script>
@@ -56,11 +56,11 @@
 
 
   <!-- GAME -->
-  <div id="game">     
-    <center>
-      <canvas id = "board"></canvas>
-    </center>
-  </div>
+  <center>
+    <div id="game">     
+        <canvas id = "board"></canvas>
+    </div>
+  </center>
   <!-- GAME -->
 
 </body>
