--- a/assets/board.html
+++ b/assets/board.html
@@ -3,6 +3,12 @@
   <link rel="stylesheet" type="text/css" href="css/css.css">
   <script src = "js/board.js"></script>
   <script>
+    
+    function showGame() {
+      show("#game")
+      populateBoard([1,2,3,4,5,6,7,8], 1.5)
+    }
+
     function main() {
       preloadSocken(  
         function(perc){
@@ -10,9 +16,6 @@
               d.innerText = perc + "%"
           if (perc == 100) {
             show("#anleitung")
-            //show("#game")
-            populateBoard([1,2,3,4,5,6,7,8])
-          }
         }
       )
     }
