--- a/assets/board.html
+++ b/assets/board.html
@@ -28,45 +28,62 @@
   </script>
 </head>
 <body>
-
-  <div id="preload">  
-    <center>
-    <h1 id="preload_indicator"></h1>
-    </center>
-  </div>
-
-  <div id="anleitung"> 
-    <h1>Anleitung</h1>
-    <p>
-      Bla bla bla bla bla bla
-      bla bla bla blabla bla bla
-      blabla bla blabla bla bla
-      bla bla bla bla blabla
-    </p>
-     <p>
-      Bla bla bla bla bla bla
-      bla bla bla blabla bla bla
-      blabla bla blabla bla bla
-      bla bla bla bla blabla
-    </p>
-    <input type="button" value="click" onclick="javascript:showGame()">
-
-  </div> <!-- anleitung -->
-  
-  <div id="game">     
-    <center>
-      <canvas id = "board"></canvas>
-    </center>
-    <div id = "player">
-      <h2>Players</h2>
-      <ol id="player_list">
-        <li> Player 1 </li>
-        <li> Player 2 </li>
-      </ol>
+  <div id="main">
+    <div id="preload">  
+      <center>
+      <h1 id="preload_indicator"></h1>
+      </center>
     </div>
-  </div> <!-- game-->
 
-  <div id = "message"> 
-  </div>
+    <div id="anleitung"> 
+      <h1>Anleitung</h1>
+      <p>
+        Bla bla bla bla bla bla
+        bla bla bla blabla bla bla
+        blabla bla blabla bla bla
+        bla bla bla bla blabla
+      </p>
+       <p>
+        Bla bla bla bla bla bla
+        bla bla bla blabla bla bla
+        blabla bla blabla bla bla
+        bla bla bla bla blabla
+      </p>
+      <input type="button" value="click" onclick="javascript:showGame()">
+
+    </div> <!-- anleitung -->
+    
+    <div id="game">   
+      <span id="game_anleitung">
+        <h1>Anleitung</h1>
+        <p>
+          Bla bla bla bla bla bla
+          bla bla bla blabla bla bla
+          blabla bla blabla bla bla
+          bla bla bla bla blabla
+        </p>
+         <p>
+          Bla bla bla bla bla bla
+          bla bla bla blabla bla bla
+          blabla bla blabla bla bla
+          bla bla bla bla blabla
+        </p>
+      </span>
+      <span id="game_board">
+          <canvas id = "board"></canvas>
+          <div id = "message"> 
+          </div>
+      </span>
+      <span id="game_highscore">
+        <div id = "player">
+          <h2>Players</h2>
+          <ol id="player_list">
+            <li> Player 1 </li>
+            <li> Player 2 </li>
+          </ol>
+        </div>
+      </span>
+    </div> <!-- game-->
+  </div> <!-- main -->
 </body>
 </html>
