--- a/assets/board.html
+++ b/assets/board.html
@@ -6,6 +6,7 @@
   <script>
     
     function showGame() {
+    goFullscreen()
       show("#game")
       //populateSharedBoard([1,1,1,1,1,1,1,1])
       rePopulate()
