qr and gui improvements

--- a/assets/board.html
+++ b/assets/board.html
@@ -54,7 +54,8 @@
 
     </div> <!-- anleitung -->
     
-    <div id="game">   
+    <div id="game">
+      <div id="title"> Socken Sortiern</div>
       <span id="game_anleitung">
         <h1>Anleitung</h1>
         <p>
@@ -69,6 +70,7 @@
           blabla bla blabla bla bla
           bla bla bla bla blabla
         </p>
+        <img src="img/qr_code_sock_sort.jpg"/>
       </span>
       <span id="game_board">
           <canvas id = "board"></canvas>
@@ -77,10 +79,8 @@
       </span>
       <span id="game_highscore">
         <div id = "player">
-          <h2>Players</h2>
+          <h1>Players</h1>
           <ol id="player_list">
-            <li> Player 1 </li>
-            <li> Player 2 </li>
           </ol>
         </div>
       </span>
