--- a/assets/index.html
+++ b/assets/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <link rel="stylesheet" type="text/css" href="css/css.css">
+  <link rel="stylesheet" type="text/css" href="css/player.css">
   <script src = "js/board.js"></script>
   <script src = "js/playerboard.js"></script>
   <script>
