--- a/assets/board.html
+++ b/assets/board.html
@@ -59,18 +59,20 @@
       <span id="game_anleitung">
         <h1>Anleitung</h1>
         <p>
-          Bla bla bla bla bla bla
-          bla bla bla blabla bla bla
-          blabla bla blabla bla bla
-          bla bla bla bla blabla
+         Die allseits beliebte Tätigkeit des
+         Socken Sortierens, jetzt auch auf dem
+         Mobiltelefon!
         </p>
-         <p>
-          Bla bla bla bla bla bla
-          bla bla bla blabla bla bla
-          blabla bla blabla bla bla
-          bla bla bla bla blabla
+        <p>
+          Das Sockendasein ist einsam. Helfen Sie mit, das
+          Leiden zu beenden! Einfach 
+          die unten anzeigte Webseite auf ihrem Handy laden und
+          unter allen angezeigten Socken, denjenigen
+          finden, der hier seinen Partner verloren
+          hat.
         </p>
         <img src="img/qr_code_sock_sort.jpg"/>
+        <h2>http://bit.ly/socksort</h2>
       </span>
       <span id="game_board">
           <canvas id = "board"></canvas>
