--- a/assets/index.html
+++ b/assets/index.html
@@ -39,21 +39,24 @@
   </div>
 
   <div id="anleitung"> 
-    <h1>Anleitung</h1>
+    <h1>Socken Sortieren</h1>
+    <h2>Anleitung</h2>
     <p>
-      Bla bla bla bla bla bla
-      bla bla bla blabla bla bla
-      blabla bla blabla bla bla
-      bla bla bla bla blabla
+       Die allseits beliebte Tätigkeit des
+       Socken Sortierens, jetzt auch auf dem
+       Mobiltelefon!
     </p>
      <p>
-      Bla bla bla bla bla bla
-      bla bla bla blabla bla bla
-      blabla bla blabla bla bla
-      bla bla bla bla blabla
+      Das Sockendasein ist einsam. Helfen Sie mit, das
+      Leiden zu beenden! Einfach 
+      den Namen eingeben und auf der nächsten Seite
+      unter allen angezeigten Socken, denjenigen
+      finden, der auf dem grossen Bildschirm seinen Partner verloren
+      hat.
+
     </p>
-    <h2>Your Name: <input id="playername" type="text" name="name"/></h2>
-    <input type="button" value='submit' onclick="showGame()"/>
+    <h2>Ihr Name: <input id="playername" type="text" name="name"/></h2>
+    <input type="button" value='sortieren' onclick="showGame()"/>
   </div> <!-- anleitung -->
 
 
