remove dead players

--- a/assets/board.html
+++ b/assets/board.html
@@ -6,6 +6,8 @@
   <script>
     
     function showGame() {
+
+    start()
     goFullscreen()
       show("#game")
       //populateSharedBoard([1,1,1,1,1,1,1,1])
