--- a/assets/board.html
+++ b/assets/board.html
@@ -57,12 +57,12 @@
     </div> <!-- anleitung -->
     
     <div id="game">
-      <div id="title"> Socken Sortiern</div>
+      <div id="title"> Socken Sortieren</div>
       <span id="game_anleitung">
         <h1>Anleitung</h1>
         <p>
          Die allseits beliebte Tätigkeit des
-         Socken Sortierens, jetzt auch auf dem
+         Sockensortierens, jetzt auch auf dem
          Mobiltelefon!
         </p>
         <p>
