--- a/assets/index.html
+++ b/assets/index.html
@@ -43,7 +43,7 @@
     <h2>Anleitung</h2>
     <p>
        Die allseits beliebte Tätigkeit des
-       Socken Sortierens, jetzt auch auf dem
+       Sockensortierens, jetzt auch auf dem
        Mobiltelefon!
     </p>
      <p>
